   * revised maps: Charge, Den of Onis, Meteor Lake, Silverhead Crossing,
     Triple Blitz, Clash
   * 'village_gold' is no longer stored when 'use_map_settings' is used
   * the server sends the game id and not only the game name if a player joins
     a game to avoid ambiguity in case of multiple games with the same name
   * show observer team chat messages in the 'Chat Log' window
 * units:
   * balancing changes:
     * gave the Fugitive the concealment ability (village hiding)
     * increased the XP requirement to advance to the Fugitive from 77 to 120
     * decreased the melee attack of the Fugitive from 12-2 to 11-2
     * decreased the ranged attack of the Fugitive from 8-4 to 7-4
 * user interface:
   * In help, for each ability and special weapon topic, display a list of
     hyperlinks to encountered units having this ability/special (bug #9567)
   * OK in the status menu replaced with more informative "Scroll To".
 * WML engine:
   * now tag [filter_adjacent] is supported in the Standard Unit Filter (SUF)
   * now tag [filter_adjacent_location] is supported in the Standard Location
     Filter (SLF)
   * remove the unused [neighbour_unit_filter] animation filter, now that SUF
     does it for us (and better)
   * a minus sign in front of a cardinal direction now reverses it ("-s"="n")
   * now radius expansion is handled last in Standard Location Filters;
     previously it was handled last except before [and], [or], and [not]
   * fix a bug with array.length side-effects causing empty arrays to increase
     to size 1
   * the WML for attack animations has been moved from the [attack] block to
     the [unit] block
   * new effect apply_to=new_animation to add animations to unit
 * miscellaneous and bug fixes:
   * various bug fixes and code cleanups
   * in help, the encountered units list is now correctly updated when using
     ":debug" and ":nodebug" commands
   * remove some useless messages from the standard output