@@ -26,6 +26,7 @@ Version 1.3.7+svn:
   * Multiplayer
     * Revised maps: Charge, Den of Onis, Meteor Lake, Silverhead Crossing,
       Triple Blitz, Clash.
+    * Linger mode now allows chatting.
 
   * Unit changes and balancing
     * Gave the Fugitive the concealment ability. (village hiding)
