@@ -28,6 +28,7 @@
    * the server sends the game id and not only the game name if a player joins
      a game to avoid ambiguity in case of multiple games with the same name
    * show observer team chat messages in the 'Chat Log' window
+   * implement linger mode for multiplayer
  * units:
    * balancing changes:
      * gave the Fugitive the concealment ability (village hiding)
